This is not useful. use on customer sites has been nil
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@12236 219f1c6e-4a0e-43c8-96f2-6e749be13fd4